--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "events": "^3.3.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
